--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="main__pain">
 				<h2 class="main__title">Pain</h2>
 				<p>“Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast yardarm. <span>Pinnace holystone mizzenmast quarter crow's nest nipperkin grog yardarm hempen halter furl.</span> Swab barque interloper chantey doubloon starboard grog black jack gangway rutters.”</p>
-				<p>”<spans>Deadlights jack lad schooner scallywag dance</spans> the hempen jig carouser broadside cable strike colors.”</p>
+				<p>”<span>Deadlights jack lad schooner scallywag dance</span> the hempen jig carouser broadside cable strike colors.”</p>
 				<p>”Bring a spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry doubloon chase. <span>Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to</span>”</p>
 				<p>”Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway. Case shot <span>Shiver me timbers gangplank crack Jennys tea cup ballast Blimey lee snow crow's nest rutters</span>. Fluke jib scourge of the seven seas boatswain schooner gaff booty Jack Tar transom spirits.”</p>
 				<p>”<span>Deadlights jack lad schooner scallywag dance</span> the hempen jig carouser broadside cable strike colors.”</p>
